  * Fix bug that crashed 'ci.auc' and 'var' if 'direction' was ">" and 'percent=TRUE' (issue #25)
  * Fix bug causing 'ci' to return 'NaN' values with 'method="delong"' when cases or controls had a single observation (issue #27)
  * Fix 'power.roc.curve' failed with curves having 'percent=TRUE'
  * Better error message for 'ci.coords' attempting to return 'threshold'
  * New algorithm = 5 (used by default) chooses the algorithm based on the number of thresholds to avoid worst case with algorithm = 3

1.11.0 (2018-03-24)
  * Added argument 'legacy.axes' to 'ggroc'
  * Fix NOTE about 'apparent S3 methods exported but not registered' in 'R CMD check'

1.10.0 (2017-06-10)
  * Basic ggplot2 support (one and multiple ROC curves)
  * Implement 'precision' and 'recall' for 'coords'
  * Fix: properly handle NAs in cases when passing cases/controls to 'roc' (thanks Thomas König for the report)
  * Fix various minor bugs detected with new unit tests
  
 1.9.1 (2017-02-05)
  * Fix: 'subset' and 'na.action' arguments now handled properly in 'roc.formula' (thanks Terry Therneau for the report)
  * Added policies to handle the case where a ROC curve has multiple "best" threshold in 'ci' (thanks Nicola Toschi for the report)
  * Support 'xlim' and 'ylim' gracefully in 'plot.roc'
  * Improved validation of input class 'levels' and 'direction'; messages when auto-detecting, use 'quiet' to turn on
  * Removed extraneous 'name' attribute on the 'p.value' (thanks Paweł Kleka for the report)
  * Faster DeLong algorithm (code contributed Stefan Siegert)

1.8 (2015-05-04)
  * NAMESPACE now properly exports the methods as S3 methods.
  * Now uses and works with 'requireNamespace'
  * Add ability to supply two ordered factors with identical levels as control / cases
  * Deprecate dangerous use of a matrix as response / predictor with a warning
  * Forward 'best.method' and 'best.weights' arguments to 'coords' in 'ci.thresholds'
  * Fix CITATION file as per CRAN request